@@ -103,7 +103,7 @@ int process::execute_process(process::exec_arguments args, std::string &output) 
 			result = NSCAPI::returnUNKNOWN;
 		} else {
 			if (GetExitCodeProcess(pi.hProcess, &dwexitcode) == 0) {
-				output = "Failed to get commands " + args.alias + " return code: " + utf8::cvt<std::string>(error::lookup::last_error());
+				output = "Failed to get commands " + args.alias + " return code: " + error::lookup::last_error();
 				result = NSCAPI::returnUNKNOWN;
 			} else {
 				result = dwexitcode;
@@ -115,9 +115,9 @@ int process::execute_process(process::exec_arguments args, std::string &output) 
 	} else {
 		DWORD error = GetLastError();
 		if (error == ERROR_BAD_EXE_FORMAT) {
-			output = "Failed to execute " + args.alias + " seems more like a script maybe you need a script executable first: " + utf8::cvt<std::string>(error::lookup::last_error(error));
+			output = "Failed to execute " + args.alias + " seems more like a script maybe you need a script executable first: " + error::lookup::last_error(error);
 		} else {
-			output = "Failed to execute " + args.alias + ": " + utf8::cvt<std::string>(error::lookup::last_error(error));
+			output = "Failed to execute " + args.alias + ": " + error::lookup::last_error(error);
 		}
 		result = NSCAPI::returnUNKNOWN;
 		CloseHandle(hChildInR);
