@@ -469,7 +469,7 @@ void CheckExternalScripts::handle_command(const commands::command_object &cd, co
 	std::string output;
 	int result = process::execute_process(arg, output);
 	if (!nscapi::plugin_helper::isNagiosReturnCode(result)) {
-		nscapi::protobuf::functions::set_response_bad(*response, "The command (" + cd.tpl.alias + ") returned an invalid return code: " + strEx::s::xtos(result));
+		nscapi::protobuf::functions::set_response_bad(*response, "The command (" + arg.alias + ") returned an invalid return code: " + strEx::s::xtos(result));
 		return;
 	}
 	std::string message, perf;
@@ -481,7 +481,7 @@ void CheckExternalScripts::handle_command(const commands::command_object &cd, co
 			output = output.substr(0,pos+1);
 	}
 	if (output.empty())
-		output = "No output available from command (" + cd.command + ").";
+		output = "No output available from command (" + arg.alias + ").";
 
 	if (!arg.ignore_perf) {
 		pos = output.find('|');
@@ -537,13 +537,13 @@ void CheckExternalScripts::handle_alias(const alias::command_object &cd, const s
 	nscapi::core_helper ch(get_core(), get_id());
 	int result = ch.simple_query(cd.command, args, buffer);
 	if (result == NSCAPI::returnIgnored) {
-		nscapi::protobuf::functions::set_response_bad(*response, "No handler for command: " + cd.command);
+		nscapi::protobuf::functions::set_response_bad(*response, "No handler for command: " + cd.tpl.alias);
 		return;
 	}
 	Plugin::QueryResponseMessage tmp;
 	tmp.ParseFromString(buffer);
 	if (tmp.payload_size() != 1) {
-		nscapi::protobuf::functions::set_response_bad(*response, "Invalid response from command: " + cd.command);
+		nscapi::protobuf::functions::set_response_bad(*response, "Invalid response from command: " + cd.tpl.alias);
 		return;
 	}
 	response->CopyFrom(tmp.payload(0));
